# sensors

./: .gitignore  Cargo.toml  LICENSE.md  README.md
controller-esp32/: Cargo.toml
controller-esp32/.cargo/: config.toml
controller-esp32/src/: main.rs
gateway-sync/: Cargo.toml
gateway-sync/src/: main.rs
server/: Cargo.toml
server/migrations/: 0001_initial.sql
server/src/: main.rs
