[package]
name = "controller-esp32"
version = "0.1.0"
authors = ["Petri Lehtinen <petri@digip.org>"]
edition = "2021"
license = "MIT"

[dependencies]
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
esp-backtrace = { version = "0.14.0", features = ["esp32c3", "exception-handler", "panic-handler", "println"] }
esp-hal = { version = "0.20.1", features = ["esp32c3", "embedded-io"] }
esp-println = { version = "0.11.0", features = ["esp32c3", "log"] }
dht-embedded = "0.4.0"
format_no_std = "1.2.0"
log = { version = "0.4.21" }
