[package]
name = "gateway-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = { version = "4.5.0", default-features = false }
regex = "1.10.6"
reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0.128"
clap = { version = "4.5.17", features = ["derive"] }
