[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
axum-auth = { version = "0.7", features = ["auth-basic"] }
chrono = { version = "0.4", features = ["serde"] }
envy = "0.4"
eyre = "0.6"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "migrate"] }
tokio = { version = "1.29", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
